[package]
name = "tabula_rasa"
version = "0.1.0"
authors = ["Sascha <sascha.trifunovic@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2"

env_logger = "0.6"
